--- a/imageapp/public/index.html
+++ b/imageapp/public/index.html
@@ -22,6 +22,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBc9rpe5yRs7N-kOZkbJEC9eOByiKscXZA"></script>
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bokor" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
